# CS-CLI-Compiler

./: CMakeLists.txt  README.md
include/: CompilerInterface.h
src/: CSProCompile.cpp  CompilerInterface.cpp  CompilerInterface.cpp.backup  CompilerInterface.cpp.old  minimal_test.cpp
